Fixing PluginManager footer text overflow

--- a/PluginManagerPlugin/v18_0/styling.css
+++ b/PluginManagerPlugin/v18_0/styling.css
@@ -53,7 +53,6 @@ body {
 }
 
 .footerDiv {
-    width: 100%;
     background-color: #ebebeb;
     font-family: sans-serif;
     padding: 10px;
